--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,47 @@
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'Raleway', sans-serif;;
+    font-family: 'Raleway', sans-serif;
     font-weight: 400;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+.hero {
+    background: url('/images/hero.png') no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 450px;
+    color:#fff;
+    border-bottom:5px #3C8DBC solid;
+}
+
+.hero-short {
+    font-size: 40pt;
+    margin-top:7%;
+    margin-left:5%;
+}
+
+.hero-long {
+    font-size: 20pt;
+    margin-left:5%;
+}
+
+.getting-started {
+    width:10%;
+    height:auto;
+    background-color:#ffffff;
+    color:#3C8DBC;
+    padding:15px;
+    margin-top:2%;
+    margin-left:5%;
+    border-radius:5px;
+}
+
+.content {
+    padding-top:10px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -41,4 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .edit {
     background-color: #FFF77D;
+}
+.outro {
+    background-color: #fff;
 }
