--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,39 +8,35 @@ body {
 }
 
 .hero {
-    background: url('/images/hero.png') no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 450px;
+    background: url('/images/hero.jpg') no-repeat center center;
+    min-height: 100%;
+    min-width: 1024px;
+
+    /* Set up proportionate scaling */
+    width: 100%;
+    height:100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     color:#fff;
+    padding:20px;
 }
 
 .blue {
     color:#999;
 }
 
-.hero-short {
-    font-size: 40pt;
-    margin-top:7%;
-    margin-left:5%;
+.hero-text {
+    float: none;
+    margin: 12% auto 3%;
 }
 
-.hero-long {
+.hero-text-large {
+    font-size: 50pt;
+}
+
+.hero-text-small {
     font-size: 20pt;
-    margin-left:5%;
-}
-
-.getting-started {
-    width:10%;
-    height:auto;
-    background-color:#ffffff;
-    color:#3C8DBC;
-    padding:15px;
-    margin-top:2%;
-    margin-left:5%;
-    border-radius:5px;
 }
 
 .content {
@@ -54,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Raleway', sans-serif;
-    font-weight: 500;
+    font-weight: 300;
 }
 
 .main-header .logo {
@@ -84,4 +80,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 .outro {
     background-color: #fff;
+}
+
+.stat {
+    border-radius: 50%;
+
+    width: 36px;
+    height: 36px;
+    padding: 8px;
+
+    background: #fff;
+    border: 10px solid #666;
+    color: #666;
+    text-align: center;
+
+    font: 32px Arial, sans-serif;
 }
