--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,8 +10,6 @@ body {
 .hero {
     background: url('/images/hero.jpg') no-repeat center center;
     background-size: cover;
-
-    /* Set up proportionate scaling */
     width: 100%;
     height:100%;
     position: fixed;
@@ -50,7 +48,7 @@ body {
     font-weight:300;
 }
 
-.fb{
+.fb {
     border-color: rgba(238, 238, 238, 0.5);
     background-color: rgba(0, 88, 121, 0.5);
     overflow: hidden;
@@ -58,7 +56,10 @@ body {
     display: inline-block;
     border-radius: 5px;
     padding: 15px;
+    width:200px;
+    margin-bottom:-8px;
 }
+
 .fb:hover {
     background-color:#005879;
 }
@@ -74,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Raleway', sans-serif;
-    font-weight: 500;
+    font-weight: 300;
 }
 
 .main-header .logo {
@@ -103,22 +104,4 @@ h1, h2, h3, h4, h5, h6 {
 
 .edit {
     background-color: #FFF77D;
-}
-.outro {
-    background-color: #fff;
-}
-
-.stat {
-    border-radius: 50%;
-
-    width: 36px;
-    height: 36px;
-    padding: 8px;
-
-    background: #fff;
-    border: 10px solid #666;
-    color: #666;
-    text-align: center;
-
-    font: 32px Arial, sans-serif;
 }
